- Arithmetic: It is possible to use ‘x’ and ‘y’ in the expressions for real
  coordinates in the image.
- Dimensions and Units: Can create a new channel or modify the current one.
- AIST: Small fix of broken file parser in spectra loading.
- NTMDT: Reimplemented Raman image loading as volume data.
- NanoScanTech: Implemented basic 4D data loading.

Others:
- The Win64 package uses correct set of registry keys, installation paths and
  the shortcut name was differentiated, allowing parallel installation with
  Win32.


2.31 (2013-02-21)
Application:
- Translations updated: Czech, French, Russian, Spanish.

Libraries:
- libgwyprocess: Bogus normalisation/possible crash in gwy_data_field_area_dh()
  in presence of mask on non-square area was fixed.
  distribution if the area contains no data due to masking.
- libgwyprocess: gwy_data_field_area_dh() returns a reasonable empty
  distribution if the area contains no data due to masking.
- libgwyprocess: Radial PSDF normalisation was corrected to be really
  sampling-independent and correspond to the formula in user guide.
- libgwyprocess: Double-free error if the initial Delaunay triangulation step
  fails was corrected.
- libgwyprocess: Swapped x and y coordinates of spectra in serialisation were
  fixed.
- libgwyprocess: Added brick (3D) data support backported from Gwyddion 3
  development branch.
- libgwydgets: Crashes upon clicking colour selection buttons were fixed.
- libgwydgets: 3D view false colour axis shows overlay, not height units in the
  overlay mode.
- libgwyapp: Visibility of false colour bar and mask are included in 3D view
  settings saved by ‘Set Defaults’.
- libgwyprocess: gwy_data_field_distort() actually works for destination
  field of different size than source.

Modules:
- APE DAX (new): Imports APE Research DAX files.
- Nanomagnetics (new): Imports Nanomagnetics NMI files.
- VTK export (new): Exports fields as VTK structured grid files.
- Magellan (new): Imports FEI Magellan SEM images.